# matgrade

./: .gitignore  README.md  pyproject.toml
matgrade/: __init__.py  assessment.py  checks.py  misc.py
tests/: test_checks.py
tests/test_grades/: temp.m  test_grades.py
tests/test_grades/submissions/: 58877-128227 - Student A - Oct 3, 2021 1121 PM-decay_time.m
tests/test_grades/submissions/.code/: sub0.m  sub1.m  sub2.m  sub3.m
tests/test_submissions/: .~lock.grades.csv#  decay_time.m  grades.csv  lab.csv  lab.yaml  plagiarism_report.html  plus_or_minus.m  test_grades.py  test_moss.py
tests/test_submissions/submissions/: 58877-128227 - Student A - Oct 3, 2021 1121 PM-plus_or_minus.m  58877-128227 - Student A - Oct 3, 2021 1123 PM-decay_time.m  58877-128227 - Student A - Oct 3, 2021 1123 PM-plus_or_minus.m  58877-128227 - Student B - Oct 1, 2021 1018 PM-decay_time.m  58877-128227 - Student B - Oct 1, 2021 1018 PM-plus_or_minus.m  58877-128227 - Student C - Sep 28, 2021 1000 AM-decay_time.m  58877-128227 - Student C - Sep 28, 2021 1000 AM-plus_or_minus.m  58877-128227 - Student D - Oct 3, 2021 1123 PM-wrong_name.m  moss
tests/test_submissions/submissions/.code/: sub0.m  sub1.m  sub2.m  sub3.m
